--- a/pyschool-frontend/src/app/globals.css
+++ b/pyschool-frontend/src/app/globals.css
@@ -24,3 +24,18 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/*
+Ejemplo de uso de variables CSS en un componente
+@theme {
+  --color-texto1: #0000;
+  --font-texto1: "fuenteTitulo";
+}
+
+@font-face {
+  font-family: "fuenteTitulo";
+  src: url("/fonts/Morado.woff2") format("woff2"); 
+  font-style: normal;
+  font-display: swap;
+}
+  */
