--- a/pyschool-frontend/src/app/globals.css
+++ b/pyschool-frontend/src/app/globals.css
@@ -44,6 +44,28 @@ body {
   --font-sign: 'Roboto', sans-serif;
 }
 
+@font-face {
+  font-family: 'Inter';
+  src: url('/fonts/Inter/Inter_24pt-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('/fonts/Inter/Inter_18pt-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@theme {
+  --color-sign: #61B3F6;
+  --color-brand: #0B1D75;
+  --font-inter: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+}
+
 /*
 Ejemplo de uso de variables CSS en un componente
 @theme {
