--- a/pyschool-frontend/src/app/globals.css
+++ b/pyschool-frontend/src/app/globals.css
@@ -13,12 +13,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
-/*@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}*/
+}
 
 body {
   background: var(--background);
@@ -74,19 +74,3 @@ body {
   font-style: normal;
   font-display: swap;
 }
-
-
-/*
-Ejemplo de uso de variables CSS en un componente
-@theme {
-  --color-texto1: #0000;
-  --font-texto1: "fuenteTitulo";
-}
-
-@font-face {
-  font-family: "fuenteTitulo";
-  src: url("/fonts/Morado.woff2") format("woff2"); 
-  font-style: normal;
-  font-display: swap;
-}
-  */
