--- a/pyschool-frontend/src/app/globals.css
+++ b/pyschool-frontend/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #C9DDDC;
   --foreground: #171717;
 }
 
@@ -13,12 +13,12 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+*/
 
 body {
   background: var(--background);
@@ -57,9 +57,6 @@ body {
 /*coverDescriptionText*/
   --color-cover-description: #000000;
   --font-cover-description: 'Roboto', sans-serif;
-/*background landingpage*/
-  --color-landing-bg: #9ED3D0;
-  --color-landing-bg-38: rgba(158, 211, 208, 0.38);
 }
 
 @font-face {
