--- a/pyschool-frontend/src/app/globals.css
+++ b/pyschool-frontend/src/app/globals.css
@@ -68,7 +68,7 @@ body {
 
 @font-face {
   font-family: 'Inter';
-  src: url('/fonts/Inter/Inter_24pt-Regular.ttf') format('truetype');
+  src: url('/fonts/Inter_24pt-Regular.ttf') format('ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -76,7 +76,7 @@ body {
 
 @font-face {
   font-family: 'Inter';
-  src: url('/fonts/Inter/Inter_18pt-Bold.ttf') format('truetype');
+  src: url('/fonts/Inter_18pt-Bold.ttf') format('ttf');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
